landing page for newly registered user

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -16,7 +16,7 @@ $landing_green: #73bb6e;
       #holder3 {
         position: relative; left: 0;width: 3000px; height: 100%;
         
-        #main_slide {
+        #main-slide {
           width: 980px; 
           float: left;
           padding: 50px 0 70px;
@@ -94,9 +94,8 @@ $landing_green: #73bb6e;
       }
     }
   }
-  
-  
-  #consumer_slide {
+
+  #consumer-slide, #registered-user-cta {
     width: 980px; 
     height: 286px;
     float: left;
@@ -112,7 +111,7 @@ $landing_green: #73bb6e;
       
       img { display: inline; }
     }
-    
+    h2 { margin-bottom: 15px;}
     h3{
       color: inherit;
       margin-bottom: 10px;
