--- a/app/views/modals/_register.html.haml
+++ b/app/views/modals/_register.html.haml
@@ -9,8 +9,8 @@
           %span Welcome to MetaBright
       %hr
       .explorebody
-        %p{ style: "margin-bottom: 0;"} Before signing up, please select which option best describes you:
+        %p{ style: "margin-bottom: 0;" } Before signing up, please select which option best describes you:
         %div
-          = link_to "I want to prove my skills and make myself more marketable.", new_user_path, class: "submit_button", style: "margin: 10px 20px"
-          = link_to "I help hire people -- I have job candidates that I want evaluated.", pricing_path, class: "submit_button", style: "margin: 10px 20px"
+          = link_to "I want to prove my skills and make myself more marketable.", new_user_path, class: "submit_button", style: "margin: 10px 20px", description: "link-to-registration"
+          = link_to "I help hire people -- I have job candidates that I want evaluated.", pricing_path, class: "submit_button", style: "margin: 10px 20px", description: "link-to-pricing"
         .clear_floats
