--- a/app/views/admin/_email_form.html.haml
+++ b/app/views/admin/_email_form.html.haml
@@ -1,5 +1,7 @@
 #styles_editor{ style: "padding: 20px;" }
   = form_for(@email, url: admin_email_url, method: :post, html: { class: "form-inline" }) do |f|
+    %div.actions{ style: "float: right;" }
+      %button{ name: "commit", value: "preview", type: "submit", class: "submit_button", style: "margin-left: 20px; float: inherit;" } Send
     %fieldset{ style: "margin-bottom: 10px;" }
       = f.text_field :subject, placeholder: "Subject", class: "input-xxlarge"
     %fieldset
@@ -8,10 +10,11 @@
       = f.text_field :from, placeholder: "From", class: "input-xlarge"
     %div.field.clearfix
       = f.text_area :body, rows: "15", placeholder: "Add email html here...", style: "margin:10px 0; width: 860px; min-height: 200px;"
-    %div#editor.ace_editor{ style: "margin:10px 0; width: 860px; min-height: 350px;" }
-    %div.actions
-      %button{ name: "commit", value: "preview", type: "submit", class: "submit_button", style: "float: inherit; background-color: gray;" } Preview
-      %button{ name: "commit", value: "preview", type: "submit", class: "submit_button", style: "margin-left: 20px; float: inherit;" } Send
+    %div#editor.ace_editor{ style: "margin:10px 0; width: 100%; min-height: 350px;" }
+.preview-container
+  .preview-pane{ style: "width: 80%; margin: 0 auto;"}
+    %h6 Message Preview:
+    %iframe#preview{ style: "width: 100%; height: 100%;" }
 :css
   .ace_scroller, .ace_gutter { padding-top: 3px; }
 
@@ -26,3 +29,23 @@
   editor.getSession().on('change', function(){
     $textarea.val(editor.getSession().getValue());
   });
+
+:javascript
+  refreshPreview = function(){
+    content = $("#email_body").val()
+    $("#preview").contents().find("html").html("<html><head></head><body>" + content + "</body></html>");
+  }
+
+  initializeEditor = function(){
+    if(window.iframeRefreshInterval)
+      clearInterval(window.iframeRefreshInterval)
+    setInterval(refreshPreview, 2500)
+
+    $(".stage-select").click(function(){
+      $("#message_stage").val($(this).data("stage"))
+      $(".btn-group .btn").removeClass("active")
+      $(this).addClass("active")
+    });
+  }
+
+  initializeEditor();
