--- a/app/views/modals/_launchpad.html.haml
+++ b/app/views/modals/_launchpad.html.haml
@@ -24,7 +24,7 @@
         %h3
           Sections
         %ul
-          - @path.sections.all(order: "id ASC").each do |s|
+          - @path.sections.order("id ASC").each do |s|
             %li.launchpad_link{ title:"#{s.name}"}
               - if s.points_until_unlock(@enrollment) <= 0
                 %div{ style: "display:inline-block; width:73%; line-height:16px;" }
