--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -55,7 +55,7 @@ pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:
 .newsfeed { border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; background-clip:padding-box; background-color:white; min-height: 550px; }
 .CRarea { overflow-y:auto; background-color: transparent; background-image: -moz-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -ms-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -o-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, .06)), to(transparent));background-image: -webkit-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: linear-gradient(top,rgba(0, 0, 0, .06),transparent); border-top: 1px solid rgba(0, 0, 0, .2); border-bottom: 1px solid rgba(0, 0, 0, .1); margin:12px -12px -7px -12px; }
 .CRarea img { max-width: 100%; max-height: 350px; border-color:#ccc; border-style:solid; border-width: 0px; display:block; margin-left:auto; margin-right:auto; }
-.sliderbar1, .sliderbar2 { right: 10%; border-right: 1px solid rgba(0,0,0,.2); border-left: 1px solid rgba(0,0,0,.2); border-bottom: 1px solid rgba(0,0,0,.2); border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; display: none; text-align: center; opacity: 0.8; padding: 3px 7px; background-color: white; position: absolute; float: right; z-index: 2; font-size: 13px; }
+.sliderbar1, .sliderbar2 { right: 10%; border-right: 1px solid rgba(0,0,0,.2); border-left: 1px solid rgba(0,0,0,.2); border-bottom: 1px solid rgba(0,0,0,.2); border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; display: none; text-align: center; opacity: 0.9; padding: 3px 7px; background-color: white; position: absolute; float: right; z-index: 2; font-size: 13px; }
 .sliderbar1:hover, .sliderbar2:hover { opacity: 1; }
 .sliderbar1 span:hover, .sliderbar2 span:hover { text-decoration: underline; }
 .obfuscation{ height:250px; background-color:whitesmoke; background-image:none; text-align: center; }
@@ -172,7 +172,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
       }
     }
     .navitem {
-      opacity: 0.8;
+      opacity: 0.9;
       &:hover { opacity: 1;}
       span {
         color: white;
@@ -182,6 +182,17 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
         top: 3px;
         position: relative;
       }
+    }
+    .register_link_holder {
+      border-radius: 3px;
+      background-color: white;
+      margin-top: 6px;
+      width: 70px;
+      padding: 0px;
+      text-align: center;
+      font-size: 15px;
+      
+      span { color: #333; text-shadow: 0 0px 1px rgba(0, 0, 0, 0.5); }
     }
     .pull-right {
       a {
@@ -482,7 +493,7 @@ body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easte
 .completioncontent ul{margin-left:43px; margin-top:3px;}
 .completioncontent li {line-height:25px;}
 
-.pull-right>.dropdown-toggle>img{opacity:.8;}
+.pull-right>.dropdown-toggle>img{opacity:.9;}
 .pull-right>.dropdown-toggle:hover img{opacity:1;}
 .pull-right>.dropdown-toggle:focus img{opacity:1;}
 .notifications_bubble{opacity:1; background-color: #F56C7E;height: 16px;width: 16px;background: #F56C7E url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/notification_bubble_background.png) no-repeat center center scroll;position: absolute;right: 0px;top: 7px;color: white;text-shadow: 1px 1px 0 rgba(0, 0, 0, .2);text-align: center;font-size: 9px;line-height: 17px;box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);-moz-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);-webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);border-radius: 13px;cursor: pointer;display: inline;}
