--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -79,7 +79,8 @@
             %li.navuser
               .dropdown.pull-right
                 - if current_user.guest_user?
-                  %a.button.btn-danger.register_link{ style: "padding:3px 7px; border-radius:2px; margin-top:2px; margin-right: 17px; text-shadow:none; color:white;" } Join
+                  %a.register_link_holder.register_link{ style: "padding: 4px 0; background-color: whiteSmoke; margin: 2px 9px 0 0;"}
+                    %span Join
                 - else
                   - groups = @groups if not @admin_group and (@groups and @groups.size > 0)
                   - enrollments = current_user.enrollments.includes(:path).where("total_points > 0").order("total_points DESC").to_a
@@ -176,8 +177,8 @@
       - if current_user.nil?
         %ul.nav.landing-nav.pull-right
           - if show_sign_in
-            %li.navitem{ style: "border: none;"}
-              = link_to "#", class: "register_link" do
+            %li.navitem.register_link_holder
+              = link_to "#", class: "register_link", style: "width: inherit; padding: 1px 0 6px;" do
                 %span Join
             %li.navitem{ style: "border: none;"}
               = link_to "#", class: "login_link" do
