change color in register modal

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -881,6 +881,7 @@ h1, h2, h3, h4, h5, h6, p, div, a { font-family: 'MuliLight', 'Helvetica', 'Aria
     }
   }
   hr {margin: 0;}
+  .landing_yellow {background-color: $landing_yellow;}
   
 }
 
