stream defaults to HoF

--- a/app/views/newsletters/newsletterAxxxx.html.haml
+++ b/app/views/newsletters/newsletterAxxxx.html.haml
@@ -16,10 +16,13 @@
         %tr
           %td{ style: "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color: #404040; padding:6px 12px 12px 12px; "}
             %h3{ style: "font-size:15px; font-weight:bold; margin:0;" } Hi #{@user.name.split.first},
-            %p{ style: "font-size:15px; margin: 0;" } Long time no email. We have some big news to announce: companies are now using MetaBright to find talented hires!
+            %p{ style: "font-size:15px; margin-top: 0;" } Long time no email. We have some big news to announce: Companies are now using MetaBright to find talented hires! 
+            %p{ style: "font-size:15px; margin: 0;" } 
+              Employers have begun using MetaBright Challenges and custom Challenges to evaluate the skills of their job candidates. In addition to using MetaBright as a talent screener, companies are also using MetaBright to discover new candidates. You can learn more about this new product here:
+              %a{ href: "http://www.metabright.com/evaluator"} www.metabright.com/evaluator
         %tr
           %td{ style: "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color: #404040; padding:6px 12px 12px 12px; "}
-            %h3{ style: "font-size: 20px; margin:0;"} Updates
+            %h3{ style: "font-size: 20px; margin:0;"} New Features
             %hr{ style: "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;" }
               %div
                 %h4{ style: "font-size:15px; font-weight:normal;"} MetaBright can now help you land your next job or internship. This feature is purely opt-in, so if you want to participate, make sure you update your settings. Here's what you need to know:
@@ -33,10 +36,11 @@
                   %li{ style: "margin-bottom:7px;"}
                     %strong Your privacy is protected:
                     Your personal information will never be revealed unless you say it's alright. And your status is never displayed on your public profile. Your current employer will never see that you're using MetaBright for professional purposes.
+                %h4{ style: "font-size:15px; font-weight:normal;"} 
 
         %tr
           %td{ style: "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color: #404040; padding:6px 12px 12px 12px; border-bottom:1px solid rgba(0, 0, 0, .1);"}
-            %h3{ style: "font-size: 20px; margin:0;"} Challenges
+            %h3{ style: "font-size: 20px; margin:0;"} New Challenges
             %hr{ style: "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
               = link_to "http://www.metabright.com/challenges/css", style: s[:challenge_box] do
                 %div{ style: "margin-bottom: 12px; padding:12px; background-color:whitesmoke; border: 1px solid rgba(0, 0, 0, .1); border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px; "}                
