--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -16,7 +16,7 @@ $landing_green: #73bb6e;
       #holder3 {
         position: relative; left: 0;width: 3000px; height: 100%;
         
-        #main-slide {
+        #main_slide {
           width: 980px; 
           float: left;
           padding: 50px 0 70px;
@@ -95,7 +95,7 @@ $landing_green: #73bb6e;
     }
   }
 
-  #consumer-slide, #registered-user-cta {
+  #consumer_slide, #registered-user-cta {
     width: 980px; 
     height: 286px;
     float: left;
