--- a/app/views/layouts/_styles_and_scripts.html.haml
+++ b/app/views/layouts/_styles_and_scripts.html.haml
@@ -104,7 +104,7 @@
 
 - if not current_user
   / Heatmatic Heat map tool /
-  - if Rails.env == "development"
+  - if false #Rails.env == "development"
     :javascript
       heatmatic_token = '1131478311215069';
       s = document.createElement("script"); s.setAttribute("type", "text/javascript")
