--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -59,7 +59,7 @@
               %span Guaranteed
               to improve your hiring accuracy and eliminate bad interviewees... or your money back.
             .big_submit_button
-              = link_to "SIGN UP!", pricing_url, class: "submit_button"
+              = link_to "SIGN UP!", pricing_url, class: "submit_button", descriptor: "signup-link"
         .sexy_time 
           %section 
             .holder  
@@ -120,7 +120,7 @@
               %span Guaranteed
               to improve your hiring accuracy and eliminate bad interviewees... or your money back.
             .big_submit_button
-              = link_to "SIGN UP!", pricing_url, class: "submit_button"
+              = link_to "SIGN UP!", pricing_url, class: "submit_button", descriptor: "signup-link"
         .area.pitch_tiles{ style: "margin-top:0; "} 
           %h2 Why you'll love MetaBright 
           .tile 
@@ -204,5 +204,5 @@
               %span Guaranteed
               to improve your hiring accuracy and eliminate bad interviewees... or your money back.
             .big_submit_button
-              = link_to "SIGN UP!", pricing_url, class: "submit_button"
+              = link_to "SIGN UP!", pricing_url, class: "submit_button", descriptor: "signup-link"
         
