--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -27,7 +27,7 @@
           .clear_floats
       -else
         #holder3
-          #main-slide
+          #main_slide
             .span7
               .hero
                 %h1 
@@ -47,7 +47,7 @@
                   %h4 I want to test my candidates.
                   %p The MetaBright Evaluator validates the skills of your job candidates before you interview them.
                   %button.button{ onclick: "document.location.href = '/evaluator';"} Learn More
-          #consumer-slide
+          #consumer_slide
             .span12
               %h3 Take Challenges to measure and showcase your skills.
               %ul
