random small things and newsletter edits

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -296,6 +296,7 @@
       div { 
         margin-left: 4px;
         display: inline-block;  
+        width: 86%;
         
         h4 { font-size: 16px; margin-bottom: 4px; font-weight: bold;  }
         span { font-size: 14px; }
