--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -62,7 +62,7 @@
                       - if t.status_id.to_i == Answer::INCOMPLETE or t.status_id.to_i == Answer::INCORRECT
                         = link_to "Draft", take_section_path(@current_section, task_id: t.id), class: "label label-info"
                       - elsif t.status_id.to_i == Answer::CORRECT
-                        = link_to "Completed", take_section_path(@current_section, task_id: t.id), class: "label label-success", style:"position:relative; top:3px;", target: "_blank"
+                        = link_to "Completed", submission_drilldown_path(t.submitted_answer_id), class: "label label-success", style:"position:relative; top:3px;"
                         %span.points= t.points_awarded.to_i.to_s + " points"
                     - else
                       = link_to "Incomplete", take_section_path(@current_section, task_id: t.id), class: "label label-important"
@@ -81,13 +81,13 @@
               - @achievement_tasks.each do |t|
                 %tr.task-row
                   %td
-                    - if t.submitted_answer_id
+                    - if t.status_id.to_i == Answer::CORRECT
                       %div= link_to t.question, submission_drilldown_path(t.submitted_answer_id)
                     - else
                       %div= link_to t.question, take_section_path(@current_section, task_id: t.id)
                   %td.question_status
                     - if t.status_id.to_i == Answer::CORRECT
-                      = link_to "Completed", take_section_path(@current_section, task_id: t.id), class: "label label-success", style:"position:relative; top:3px;", target: "_blank"
+                      = link_to "Completed", submission_drilldown_path(t.submitted_answer_id), class: "label label-success", style:"position:relative; top:3px;"
                       %br
                       %div.points{style:"margin-right:4px;"}= t.points_awarded.to_i.to_s + " points"
                     - else
