--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -57,7 +57,7 @@ pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:
 .CRarea img { max-width: 100%; max-height: 350px; border-color:#ccc; border-style:solid; border-width: 0px; display:block; margin-left:auto; margin-right:auto; }
 .sliderbar1, .sliderbar2 { right: 10%; border-right: 1px solid rgba(0,0,0,.2); border-left: 1px solid rgba(0,0,0,.2); border-bottom: 1px solid rgba(0,0,0,.2); border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; display: none; text-align: center; opacity: 0.9; padding: 3px 7px; background-color: white; position: absolute; float: right; z-index: 2; font-size: 13px; }
 .sliderbar1:hover, .sliderbar2:hover { opacity: 1; }
-.sliderbar1 span:hover, .sliderbar2 span:hover { text-decoration: underline; }
+.sliderbar1 a:hover, .sliderbar2 a:hover { text-decoration: underline; }
 .obfuscation{ height:250px; background-color:whitesmoke; background-image:none; text-align: center; }
 .obfuscation img{ margin-top:38px; }
 .obfuscation a{ color:gray; }
