--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -55,6 +55,9 @@
       - if post.answer_type == Task::CREATIVE
         .preview
           %div.sliderbar1
+            - if post.user_id == current_user.id
+              = link_to "Edit", take_section_path(post.section_id, task_id: post.task_id), style: "color: #404040;"
+              |
             - unless feed.context == :submission 
               %span
                 = link_to "View Full", submission_drilldown_path(post.submitted_answer_id), style: "color: #404040;"
